# gitlaw

./: .gitignore  .pylintrc  README.md  gitlab_api_ref.yml  minimum.yml  pyproject.toml  requirements.txt  roadmap.md  scm_policy.py
.github/workflows/: linters.yml  python-publish.yml
examples/: example.yml
gitlaw/: cli.py
gitlaw/base/: backend.py  parser.py
gitlaw/gitlab/: backend.py  groups.py  settings.py
gitlaw/gitlab_base/: backend.py  groups.py  settings.py
scm_policy/base/: backend.py
scm_policy/gitlab/: backend.py  groups.py  settings.py
