[project]
name = "gitlaw"
dynamic = ["version"]
authors = [
  { name="Eduardo Gonzalez", email="dabarren@gmail.com" },
]
description = "SCM policy manager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/xNaaro/gitlaw"
Issues = "https://github.com/xNaaro/gitlaw/issues"

[project.scripts]
gitlaw = "gitlaw.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
